Bug 130032 - FILEOPEN XLSX Custom data label position of line chart/point chart/area chart is not retained
Summary: FILEOPEN XLSX Custom data label position of line chart/point chart/area chart...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
6.4.0.0.beta1+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.5.0
Keywords: filter:xlsx
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2020-01-16 10:10 UTC by NISZ LibreOffice Team
Modified: 2020-01-31 09:55 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel. (20.92 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-01-16 10:11 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Excel and Calc. (120.24 KB, image/png)
2020-01-16 10:11 UTC, NISZ LibreOffice Team
Details
Screen shot of work-in-progress fix (left: MSO, right: LO) (13.62 KB, image/png)
2020-01-31 09:25 UTC, László Németh
Details
screen shot of the fixed import (13.66 KB, image/png)
2020-01-31 09:44 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-01-16 10:10:34 UTC
Description:
The custom data label position of line chart/point chart/area chart is not retained when opening Xlsx file in Calc.

Steps to Reproduce:
1. Create a line chart/point chart/area chart in Excel. 
2. Enable data labels and drag one of the labels.
3. Save the file and open in Calc.


Actual Results:
The custom data label position is reset to default. 

Expected Results:
The custom data label position is retained.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 NISZ LibreOffice Team 2020-01-16 10:11:14 UTC
Created attachment 157180 [details]
Example file from Excel.
Comment 2 NISZ LibreOffice Team 2020-01-16 10:11:34 UTC
Created attachment 157181 [details]
Screenshot of the original document side by side in Excel and Calc.
Comment 3 Balázs Varga 2020-01-30 12:14:42 UTC
Confirmed in:

Version: 6.2.5.2 (x64)
Build ID: 1ec314fa52f458adc18c4f025c545a4e8b22c159
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: en-US (hu_HU); UI-Language: en-US
Calc:
Comment 4 László Németh 2020-01-31 09:25:57 UTC
Created attachment 157548 [details]
Screen shot of work-in-progress fix (left: MSO, right: LO)
Comment 5 Commit Notification 2020-01-31 09:44:29 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dff7a46fb46d1fa2a3ad674ee493ae2d59150fe3

tdf#130032 Chart OOXML Import: fix data label custom position

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 László Németh 2020-01-31 09:44:40 UTC
Created attachment 157551 [details]
screen shot of the fixed import
Comment 7 László Németh 2020-01-31 09:49:18 UTC
(Note: Sorry, the previous "work-in-progress" screen shot resulted by my incomplete testing with an old master.)