chart2/qa/extras/chart2import.cxx
@@ -153,6 +153,7 @@ public:
     void testTdf123206CustomLabelField();
     void testTdf125444PercentageCustomLabel();
     void testDataPointLabelCustomPos();
+    void testTdf130032();
 
     CPPUNIT_TEST_SUITE(Chart2ImportTest);
     CPPUNIT_TEST(Fdo60083);
@@ -254,6 +255,7 @@ public:
     CPPUNIT_TEST(testTdf123206CustomLabelField);
     CPPUNIT_TEST(testTdf125444PercentageCustomLabel);
     CPPUNIT_TEST(testDataPointLabelCustomPos);
+    CPPUNIT_TEST(testTdf130032);
 
     CPPUNIT_TEST_SUITE_END();
 
@@ -2353,6 +2355,7 @@ void Chart2ImportTest::testTdf125444PercentageCustomLabel()
 
 void Chart2ImportTest::testDataPointLabelCustomPos()
 {
+    // test CustomLabelPosition on Bar chart
     load("/chart2/qa/extras/data/xlsx/", "testDataPointLabelCustomPos.xlsx");
     uno::Reference< chart2::XChartDocument > xChartDoc = getChartDocFromSheet(0, mxComponent);
     CPPUNIT_ASSERT(xChartDoc.is());
@@ -2370,6 +2373,28 @@ void Chart2ImportTest::testDataPointLabelCustomPos()
     sal_Int32 aPlacement;
     xPropertySet->getPropertyValue("LabelPlacement") >>= aPlacement;
     CPPUNIT_ASSERT_EQUAL(chart::DataLabelPlacement::OUTSIDE, aPlacement);
+}
+
+void Chart2ImportTest::testTdf130032()
+{
+    // test CustomLabelPosition on Line chart
+    load("/chart2/qa/extras/data/xlsx/", "testTdf130032.xlsx");
+    uno::Reference< chart2::XChartDocument > xChartDoc = getChartDocFromSheet(0, mxComponent);
+    CPPUNIT_ASSERT(xChartDoc.is());
+    uno::Reference<chart2::XDataSeries> xDataSeries(getDataSeriesFromDoc(xChartDoc, 0));
+    CPPUNIT_ASSERT(xDataSeries.is());
+
+    uno::Reference<beans::XPropertySet> xPropertySet(xDataSeries->getDataPointByIndex(1), uno::UNO_SET_THROW);
+    CPPUNIT_ASSERT(xPropertySet.is());
+
+    chart2::RelativePosition aCustomLabelPosition;
+    xPropertySet->getPropertyValue("CustomLabelPosition") >>= aCustomLabelPosition;
+    CPPUNIT_ASSERT_DOUBLES_EQUAL(aCustomLabelPosition.Primary, -0.0438333333333334, 1e-7);
+    CPPUNIT_ASSERT_DOUBLES_EQUAL(aCustomLabelPosition.Secondary, 0.086794050743657, 1e-7);
+
+    sal_Int32 aPlacement;
+    xPropertySet->getPropertyValue("LabelPlacement") >>= aPlacement;
+    CPPUNIT_ASSERT_EQUAL(chart::DataLabelPlacement::RIGHT, aPlacement);
 }
 
 CPPUNIT_TEST_SUITE_REGISTRATION(Chart2ImportTest);
